@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.614 2006/03/06 21:59:23 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.615 2006/03/07 00:40:17 agaffney Exp $
 
   7 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
@@ -11,6 +11,8 @@
   src/GLIStorageDevice.py:
   return start/end with ip structure
   pad min ntfs size by 50 MB just to be safe
+  src/GLIArchitectureTemplate.py:
+  only install filesystem tools for partitions with a mountpoint
 
   5 Mar 2006; Preston Cody <codeman@gentoo.org>
   add error catching and text to saving profile dialogs
